# openimis-claimslens

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  OPERATIONS.md  README.md  demo_flow.py  docker-compose.override.yml  docker-compose.yml  test_documents.json
backend/: .gitignore  Dockerfile  MANIFEST.in  README.md  alembic.ini  pyproject.toml  setup.py
backend/claimlens/: __init__.py  admin.py  apps.py  gql_mutations.py  gql_queries.py  models.py  preprocessing.py  schema.py  services.py  signals.py  storage.py  tasks.py  urls.py  validations.py  views.py
backend/claimlens/engine/: base.py  manager.py  types.py
backend/claimlens/engine/adapters/: deepseek.py  gemini.py  mistral.py  openai_compatible.py
backend/claimlens/engine/prompts/: classification.md  extraction.md
backend/claimlens/migrations/: 0001_initial.py  0002_engineconfig_adapter_choices.py  0003_seed_openrouter_engine.py  0004_remove_gemini_adapter.py  0005_seed_validation_rules.py  0006_engineroutingrule.py  0007_seed_engines_doctypes_routing.py  0008_update_extraction_templates.py  0009_prompt_template.py
backend/claimlens/tests/: data.py  test_downstream_validation.py  test_engine.py  test_graphql.py  test_models.py  test_routing.py  test_services.py  test_signals.py  test_tasks.py  test_upstream_validation.py  test_validation_tasks.py  test_views.py
backend/claimlens/validation/: downstream.py  upstream.py
backend/src/claimlens/: __init__.py  config.py  dependencies.py  main.py
backend/tests/: test_health.py  test_validation.py
devtools/: README.md  (+6 more)
(+129 files in other folders)
